--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,147 @@
-.capital {
-    text-transform: capitalize;
+* {
+    margin: 0;
 }
-.upper {
-    text-transform: uppercase;
-}
+
 body {
     background-color: #f5f6fa;
 }
-body * {
-    box-sizing: border-box;
-}
+
 .app {
     display: flex;
     justify-content: space-evenly;
-    padding: 1rem;
+    background-color: #f5f6fa;
+    padding: 20px;
 }
-.app__left {
-    flex: 0.8;
+
+.app__dropdown {
+    background-color: white;
 }
+
 .app__header {
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
     justify-content: space-between;
-    margin-bottom: 1rem;
 }
+
+.app__header > h1 {
+    color: #fc3c3c;
+    font-size: 2rem;
+}
+
 .app__state {
     display: flex;
     justify-content: space-between;
+}
+
+.app__left {
+    flex: 0.8;
+}
+
+.app__information > h3 {
+    color: #6a5d5d;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.app__information > h3:last-of-type {
+    margin-top: 1rem;
+}
+.infoBox {
+    flex: 1;
+}
+
+.infoBox:not(:last-child) {
+    margin-right: 10px;
+}
+
+.infoBox--selected {
+    border-top: 10px solid greenyellow;
+}
+
+.infoBox--red {
+    border-color: red;
+}
+
+.infoBox__cases--green {
+    color: lightgreen !important;
+}
+
+.infoBox__cases {
+    color: #cc1034;
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.infoBox__total {
+    color: #6c757d;
+    font-weight: 700 !important;
+    font-size: 0.8rem !important;
+    margin-top: 15px !important;
+}
+.map {
+    height: 500px;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 20px;
+    margin-top: 16px;
+    box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
+}
+
+.map .leaflet-container {
+    height: 100%;
+    border-radius: 12px;
+}
+
+.info-flag img {
+    width: 100px;
+    border-radius: 5px;
+}
+
+.info-name {
+    font-size: 20px;
+    font-weight: bold;
+    color: #555;
+}
+
+.info-container {
+    width: 150px;
+}
+
+.info-flag {
+    height: 80px;
+    width: 100%;
+    background-size: cover;
+    border-radius: 8px;
+}
+
+.info-confirmed,
+.info-recovered,
+.info-deaths {
+    font-size: 16px;
+    margin-top: 5px;
+}
+.table {
+    margin-top: 20px;
+    color: #6a5d5d;
+    background-color: white;
+    height: 400px;
+}
+
+.table tr {
+    display: flex;
+    justify-content: space-between;
+}
+
+.table td {
+    padding: 0.5rem;
+    border: none;
+}
+
+.table tr:nth-of-type(odd) {
+    background-color: #f3f2f8;
 }
 @media (max-width: 990px) {
     .app {
