--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,35 @@
 * {
     margin: 0;
+    font-family: 'Oswald', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
     background-color: #f5f6fa;
+    max-height: 100vh;
 }
-
+.card {
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    color: rgba(0, 0, 0, 0.87);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    background-color: #fff;
+    padding: 0.8vw;
+    font-size: 1.2vw;
+}
 .app {
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 70vw 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     background-color: #f5f6fa;
-    padding: 20px;
+    padding: 1vw;
 }
-
+.app > div {
+    padding: 0.8vw;
+}
 .app__dropdown {
     background-color: white;
 }
@@ -20,22 +37,21 @@ body {
 .app__header {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 0.5vw;
     justify-content: space-between;
 }
-
-.app__header > h1 {
-    color: #fc3c3c;
+.app__header > div {
+    width: 50%;
+    align-items: center;
+}
+.app__header h1 {
     font-size: 2rem;
+    text-transform: uppercase;
 }
 
 .app__state {
     display: flex;
     justify-content: space-between;
-}
-
-.app__left {
-    flex: 0.8;
 }
 
 .app__information > h3 {
@@ -61,15 +77,15 @@ body {
 }
 
 .infoBox--red {
+    color: red;
     border-color: red;
 }
 
 .infoBox__cases--green {
-    color: lightgreen !important;
+    color: greenyellow;
 }
 
 .infoBox__cases {
-    color: #cc1034;
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 0.5rem;
@@ -77,14 +93,14 @@ body {
 
 .infoBox__total {
     color: #6c757d;
-    font-weight: 700 !important;
-    font-size: 0.8rem !important;
-    margin-top: 15px !important;
+    font-weight: 700;
+    font-size: 0.8rem;
+    margin-top: 15px;
 }
 .map {
-    height: 500px;
+    height: 65vh;
+    max-height: 100%;
     background-color: white;
-    padding: 1rem;
     border-radius: 20px;
     margin-top: 16px;
     box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
@@ -92,7 +108,11 @@ body {
 
 .map .leaflet-container {
     height: 100%;
+    width: 100%;
+
     border-radius: 12px;
+    position: relative;
+    z-index: 0;
 }
 
 .info-flag img {
@@ -123,8 +143,9 @@ body {
     font-size: 16px;
     margin-top: 5px;
 }
+
 .table {
-    margin-top: 20px;
+    display: grid;
     color: #6a5d5d;
     background-color: white;
     height: 400px;
@@ -143,8 +164,10 @@ body {
 .table tr:nth-of-type(odd) {
     background-color: #f3f2f8;
 }
+
 @media (max-width: 990px) {
     .app {
-        flex-direction: column;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
     }
 }
