--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body {
   background-color: #f5f6fa;
   max-height: 100vh;
+  overflow-x:hidden;
 }
 .card {
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
